# yolov11-trt

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: FindTensorRT.cmake
include/yolov11-trt/: preprocess.h  yolov11.h
include/yolov11_trt/: yolov11.hpp
scripts/: export_onnx.py  onnx.py
src/: YOLOv11.cpp  main.cpp  preprocess.cu  yolov11.cpp
