<package format="3">
  <name>yolov11_trt</name>
  <version>0.1.0</version>
  <description>YOLO v11 TensorRT</description>
  <maintainer email="alessandro.saviolo@nyu.edu">Alessandro Saviolo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>